--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
     <br>
     <li>Coco Tweaks Twitter (⌘ + T)</li>
     <br>
-    <li>Coco Thweaks Instagram (⌘ + N)</li>
+    <li>Coco Tweaks Instagram (⌘ + N)</li>
     </div>
 </div>
 <div class="block info">
