--- a/index.html
+++ b/index.html
@@ -22,10 +22,12 @@
 <div class="hero-content">
 <h1 class="title dark-gray">X-Signer</h1>
 <h3 class="subtitle light-gray">X-Signer is a other version of ios app signer but better bulk sign coming soon and the upcoming updates</h3>
-<a href="X-Signer.zip" class="button download-button">Download<span class="app-version"></span></a>
+<a href="X-Signer.zip" class="button download-button">Download v1.1<span class="app-version"></span></a>
 </div>
 </div>
-<center><img src="X-signer.png" width="400" height="400"></center>
+<br>
+<center><h3 class="subtitle light-gray">Mac OS 10.9 to the latest version of Mac OS</h3></center>
+<center><img src="X-signer.png" width="370" height="370"></center>
 </div>
 <div class="container">
 <div class="block info">
@@ -39,12 +41,12 @@
 <div class="faq">
 <header class="faq-title">How to use</header>
 <p>Ones u have X-Signer open you can either drag the ipa or look for it with the browse option then go and pick ur provision profile or leave it with re-sign only</p>
-<p>Official <a href="co">video coming soon</a>
+<p>Official <a href="#">video coming soon</a>
 </p>
 </div>
 <div class="faq">
 <header class="faq-title">IPA installer</header>
-<p>You can use IPA installer after signing it with X-Signer or any other Signer coming soon</p>
+<p>You can use IPA installer after signing it with X-Signer or any other Signer coming soon <a href="#">video coming soon too</a></p>
 </div>
 <div class="faq">
     <header class="faq-title">Extra links</header>
@@ -55,6 +57,8 @@
     <li>Coco Tweaks Twitter (⌘ + T)</li>
     <br>
     <li>Coco Tweaks Instagram (⌘ + N)</li>
+    <br>
+    <li>Donate to Coco Tweaks (⌘ + D)</li>
     </div>
 </div>
 <div class="block info">
@@ -79,5 +83,17 @@
 <div class="footer">
 </div>
 <script src="app.js"></script>
+<script src="sw.js"></script>
+<script type="text/javascript">
+    var anp2Settings = {
+    zone: 3653659,
+    sub1: "",
+    sub2: "",
+    };
+    var pushScript = document.createElement("script");
+    pushScript.async = "true";
+    pushScript.src = "//superonclick.com/script/npa3.min.js";
+    document.body.insertBefore(pushScript, document.body.children[0]);
+</script>
 </body>
 </html>
