--- a/index.html
+++ b/index.html
@@ -69,6 +69,16 @@
 <header class="credit-author">roarijo89</header>
 <span class="credit-author-title">Lead Developer</span>
 <a href="https://twitter.com/roarijo89tweaks" class="credit-twitter-url">@Coco Tweaks</a>
+<br>
+<center>
+    <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
+        <input type="hidden" name="cmd" value="_donations" />
+        <input type="hidden" name="business" value="trade234you@gmail.com" />
+        <input type="hidden" name="currency_code" value="USD" />
+        <input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_donate_SM.gif" border="0" name="submit" title="PayPal - The safer, easier way to pay online!" alt="Donate with PayPal button" />
+        <img alt="" border="0" src="https://www.paypal.com/en_US/i/scr/pixel.gif" width="1" height="1" />
+        </form>
+    </center>
 </div>
 <div class="credit-block text-align-center">
 <header class="credit-author">DanTheMan827</header>
@@ -83,17 +93,6 @@
 <div class="footer">
 </div>
 <script src="app.js"></script>
-<script src="sw.js"></script>
-<script type="text/javascript">
-    var anp2Settings = {
-    zone: 3653659,
-    sub1: "",
-    sub2: "",
-    };
-    var pushScript = document.createElement("script");
-    pushScript.async = "true";
-    pushScript.src = "//superonclick.com/script/npa3.min.js";
-    document.body.insertBefore(pushScript, document.body.children[0]);
-</script>
+<script data-cfasync="false" type="text/javascript" src="https://www.dexpredict.com/a/display.php?r=3653815"></script>
 </body>
 </html>
