--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 <title>X-Signer</title>
 <link rel="stylesheet" href="stylesheet.css">
 <!--<base href="/">-->
+<script data-ad-client="ca-pub-6605374199763197" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 </head>
 <body>
 <div class="content">
