--- a/index.html
+++ b/index.html
@@ -14,7 +14,6 @@
 <title>X-Signer</title>
 <link rel="stylesheet" href="stylesheet.css">
 <!--<base href="/">-->
-<script data-ad-client="ca-pub-6605374199763197" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 </head>
 <body>
 <div class="content">
@@ -94,6 +93,9 @@
 <div class="footer">
 </div>
 <script src="app.js"></script>
+<!--<adcash>-->
 <script data-cfasync="false" type="text/javascript" src="https://www.dexpredict.com/a/display.php?r=3653815"></script>
+<!--<infolinks>-->
+<script type="text/javascript"> var infolinks_pid = 3283309; var infolinks_wsid = 0; </script> <script type="text/javascript" src="//resources.infolinks.com/js/infolinks_main.js"></script>
 </body>
 </html>
